# HelloAgents-learn_version

./: .env.example  .gitignore  AGENTS.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.opencodereview/: rule.json
apps/api/: Dockerfile  alembic.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_workspaces.py
apps/api/learn_agent_api/: __init__.py  main.py  settings.py
apps/api/learn_agent_api/db/: models.py  session.py
apps/api/learn_agent_api/observability/: __init__.py  logging.py
apps/api/learn_agent_api/routers/: health.py  system.py  workspaces.py
apps/api/learn_agent_api/schemas/: workspace.py
apps/api/learn_agent_api/services/: workspaces.py
apps/api/tests/: test_workspace_api.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/web/src/: main.tsx  styles.css
apps/web/src/app/: App.tsx
docs/: AGENT_COLLABORATION_PLAYBOOK.md  DATABASE_AND_DEPLOYMENT_PLAN.md  LEARNING_AGENT_BLUEPRINT.md  SELF_HOST_DEVELOPMENT_ROADMAP.md
docs/01-stage-0-foundation/: README.md
docs/01-stage-0-foundation/adr/: 001-self-host-data-stack.md
docs/01-stage-0-foundation/specs/: 001-stage-0-foundation.md
docs/02-stage-1-self-host-platform/: README.md  SELF_HOST_RUNBOOK.md  STAGE_1_SUMMARY_AND_STAGE_2_INPUTS.md
docs/02-stage-1-self-host-platform/adr/: 001-stage-1-application-stack.md
docs/02-stage-1-self-host-platform/reviews/: 2026-07-08-stage-1-platform-skeleton.md  README.md
docs/02-stage-1-self-host-platform/specs/: 001-self-host-platform-skeleton.md
docs/api/: index.md
docs/api/agents/: index.md
docs/api/core/: llm.md
docs/api/memory/: index.md
docs/api/protocols/: README.md  a2a_examples.md  anp_examples.md  mcp_detailed.md
docs/api/rl/: README.md  datasets.md  rewards.md  rl_training_tool.md  trainers.md
docs/api/tools/: index.md
docs/tutorials/: CONFIGURATION.md  LOCAL_DEPLOYMENT_GUIDE.md
examples/: chapter07_basic_setup.py  chapter08_memory_rag.py  chapter09_context_engineering.py  chapter10_protocols.py  chapter11_RL.py
examples/agent/: function_call_agent_demo.py
hello_agents/: __init__.py  version.py
hello_agents/agents/: __init__.py  function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py  tool_aware_agent.py
hello_agents/context/: __init__.py  builder.py
hello_agents/core/: __init__.py  agent.py  config.py  database_config.py  exceptions.py  llm.py  message.py
hello_agents/evaluation/: __init__.py
hello_agents/evaluation/benchmarks/: __init__.py
hello_agents/evaluation/benchmarks/bfcl/: __init__.py  bfcl_integration.py  dataset.py  evaluator.py  metrics.py
hello_agents/evaluation/benchmarks/data_generation/: __init__.py  dataset.py  llm_judge.py  win_rate.py
hello_agents/evaluation/benchmarks/gaia/: __init__.py  dataset.py  evaluator.py  metrics.py
hello_agents/memory/: __init__.py  base.py  embedding.py  manager.py
hello_agents/memory/rag/: __init__.py  document.py  pipeline.py
hello_agents/memory/storage/: __init__.py  document_store.py  neo4j_store.py  qdrant_store.py
hello_agents/memory/types/: __init__.py  episodic.py  perceptual.py  semantic.py  working.py
hello_agents/protocols/: __init__.py  base.py
hello_agents/protocols/a2a/: __init__.py  implementation.py
hello_agents/protocols/anp/: __init__.py  implementation.py
hello_agents/protocols/mcp/: __init__.py  client.py  server.py  utils.py
hello_agents/rl/: __init__.py  datasets.py  rewards.py  trainers.py  utils.py
hello_agents/tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py
hello_agents/tools/builtin/: __init__.py  bfcl_evaluation_tool.py  calculator.py  gaia_evaluation_tool.py  llm_judge_tool.py  mcp_wrapper_tool.py  memory_tool.py  note_tool.py  protocol_tools.py  rag_tool.py  rl_training_tool.py  search_tool.py  terminal_tool.py  win_rate_tool.py
hello_agents/utils/: __init__.py  helpers.py  logging.py  serialization.py
tests/: test_tools_core.py
